--- a/src/GUI/Spielbildschirm.fxml
+++ b/src/GUI/Spielbildschirm.fxml
@@ -30,7 +30,7 @@
          </children></AnchorPane>
       <SplitPane dividerPositions="0.5" orientation="VERTICAL">
          <items>
-            <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="628.0" prefWidth="600.0">
+            <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" onKeyPressed="#raumschiffrechts" prefHeight="628.0" prefWidth="600.0">
                <children>
                   <Polygon fx:id="raumschiff" fill="DODGERBLUE" layoutX="299.0" layoutY="531.0" onKeyPressed="#raumschifflinks" points="-32.5, 40.0, 32.5, 40.0, -1.5, -15.0" stroke="BLACK" strokeType="INSIDE" />
                   <Rectangle fx:id="Monster" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="58.0" layoutX="274.0" layoutY="78.0" stroke="BLACK" strokeType="INSIDE" width="51.0" />
