--- a/src/GUI/Startbildschirm.fxml
+++ b/src/GUI/Startbildschirm.fxml
@@ -4,41 +4,39 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Polygon?>
-<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
 <SplitPane dividerPositions="0.5" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="768.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Startbildschirmcontroller">
   <items>
-    <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="0.0" minWidth="0.0" prefHeight="70.0" prefWidth="600.0">
+    <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="0.0" minWidth="0.0" prefHeight="70.0" prefWidth="600.0" style="-fx-background-color: &quot;black&quot;;">
          <children>
-            <Label contentDisplay="CENTER" layoutX="14.0" prefHeight="70.0" prefWidth="138.0" text="HIGHSCORE:" textAlignment="CENTER">
+            <Label contentDisplay="CENTER" layoutX="14.0" prefHeight="70.0" prefWidth="138.0" text="HIGHSCORE:" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font size="23.0" />
                </font>
             </Label>
-            <Label fx:id="lbl_highscorename" layoutX="157.0" layoutY="10.0" prefHeight="50.0" prefWidth="183.0" text="Leon">
+            <Label fx:id="lbl_highscorename" layoutX="157.0" layoutY="10.0" prefHeight="50.0" prefWidth="183.0" text="Leon" textFill="WHITE">
                <font>
                   <Font size="23.0" />
                </font>
             </Label>
-            <Label fx:id="lbl_highcorepunkte" layoutX="383.0" layoutY="17.0" prefHeight="36.0" prefWidth="209.0" text="999999" textAlignment="RIGHT">
+            <Label fx:id="lbl_highcorepunkte" layoutX="383.0" layoutY="17.0" prefHeight="36.0" prefWidth="209.0" text="999999" textAlignment="RIGHT" textFill="WHITE">
                <font>
                   <Font size="23.0" />
                </font>
             </Label>
          </children>
       </AnchorPane>
-    <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="0.0" minWidth="0.0" prefHeight="618.0" prefWidth="600.0">
+    <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="0.0" minWidth="0.0" prefHeight="698.0" prefWidth="600.0" style="-fx-background-color: &quot;black&quot;;">
          <children>
-            <Label alignment="CENTER" layoutX="239.0" layoutY="148.0" prefHeight="50.0" prefWidth="120.0" text="Space" textAlignment="CENTER" textOverrun="CLIP">
+            <Label alignment="CENTER" layoutX="239.0" layoutY="148.0" prefHeight="50.0" prefWidth="120.0" text="Space" textAlignment="CENTER" textFill="WHITE" textOverrun="CLIP">
                <font>
                   <Font size="40.0" />
                </font>
             </Label>
-            <Polygon fill="DODGERBLUE" layoutX="102.0" layoutY="157.0" points="-29.5, 40.0, 30.5, 40.0, -0.5, -9.0" rotate="-33.7" stroke="BLACK" strokeType="INSIDE" />
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="58.0" layoutX="460.0" layoutY="148.0" rotate="40.0" stroke="BLACK" strokeType="INSIDE" width="51.0" />
             <Button fx:id="btn_hölle" contentDisplay="CENTER" layoutX="327.0" layoutY="463.0" mnemonicParsing="false" onAction="#hölle" prefHeight="36.0" prefWidth="120.0" text="Hölle" textAlignment="CENTER">
                <font>
                   <Font size="15.0" />
@@ -49,12 +47,12 @@
                   <Font size="15.0" />
                </font>
             </Button>
-            <Label layoutX="237.0" layoutY="191.0" text="Invader">
+            <Label layoutX="237.0" layoutY="191.0" text="Invader" textFill="WHITE">
                <font>
                   <Font size="40.0" />
                </font>
             </Label>
-            <Label layoutX="260.0" layoutY="241.0" prefHeight="17.0" prefWidth="78.0" text="- aber besser" />
+            <Label layoutX="260.0" layoutY="241.0" prefHeight="17.0" prefWidth="78.0" text="- aber besser" textFill="WHITE" />
             <TextField fx:id="txt_Namensfeld" alignment="CENTER" layoutX="158.0" layoutY="288.0" promptText="Enter your Name">
                <font>
                   <Font size="23.0" />
@@ -65,6 +63,26 @@
                   <Font size="23.0" />
                </font>
             </Label>
+            <ImageView fitHeight="70.0" fitWidth="70.0" layoutX="421.0" layoutY="138.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../HyenaClassBomber.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="70.0" fitWidth="70.0" layoutX="491.0" layoutY="206.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../TIEFigtherFront.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="70.0" fitWidth="70.0" layoutX="491.0" layoutY="61.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../Großschiff_Separatisten.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="70.0" fitWidth="70.0" layoutX="77.0" layoutY="153.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../MileniumFalke3.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
   </items>
